--- a/draft.ipynb
+++ b/draft.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "# Tiền xử lý dữ liệu\n",
-    "selected_province = 'Bac Lieu'\n",
+    "selected_province = 'Hanoi'\n",
     "df = df[df['province'] == selected_province]\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
     "df['diff_humidi'] = df['humidi'] - df['humidi'].shift(-1, axis=0)\n",
@@ -200,7 +200,6 @@
     "# Lấy thông tin về lượng mưa ở hàng ngay sau làm giá trị dự đoán lượng mưa ngày hôm sau tại bản ghi hiện tại\n",
     "df['rain_tomorrow'] = df['rain'].shift(-1, axis=0)\n",
     "# Loại bỏ hàng cuối cùng do khi thực hiện chuyển dịch thì hàng cuối với cột rain_tomorrow sẽ không có giá trị.\n",
-    "df = df.iloc[:df.shape[0] - 1, :]\n",
     "df = df.dropna()\n",
     "\n"
    ]
